welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value reculeSiestFaceMurEstVraie
	 reculeSiestFaceMurEstVraie();
         ^Program:3: error: not found: value avanceSiestFaceMurEstVraie
}else{ avanceSiestFaceMurEstVraie();
       ^