welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFaceMur){
	 reculeSiestFaceMurEstVraie();
}else{ avanceSiestFaceMurEstVraie();
}